HREPTWO-3845: In IE calendar hides behind xinha preview box https://issues.onehippo.com/browse/HREPTWO-3845  - moved datepicker container element to document.body to avoid IE z-index issue  - gave datepicker container higher z-index than Dialog root element
svn path=/hippo-ecm/trunk/; revision=21906

--- a/repository/addon/yui/src/main/java/org/hippoecm/frontend/plugins/yui/datetime/skin.css
+++ b/repository/addon/yui/src/main/java/org/hippoecm/frontend/plugins/yui/datetime/skin.css
@@ -5,6 +5,7 @@
     background-color:#f2f2f2;
     border:1px solid #808080;
     padding:10px;
+    z-index: 21000;
 }
 
 /* CALENDARGROUP BOUNDING BOX */
